[gd_scene load_steps=16 format=3 uid="uid://dhq7y1e0rilly"]

[ext_resource type="Script" path="res://src/scenes/accesories/interface/interface.gd" id="1_478kc"]
[ext_resource type="FontFile" uid="uid://6fpashtqjktp" path="res://src/assets/fonts/Funkrocker.otf" id="2_nym1v"]
[ext_resource type="Texture2D" uid="uid://cw810xsgiflf6" path="res://src/assets/icons/KEYBOARD.png" id="4_66cpv"]
[ext_resource type="Script" path="res://src/scenes/accesories/interface/panel.gd" id="6_syfkd"]
[ext_resource type="Texture2D" uid="uid://b5lf1p6155yp1" path="res://src/assets/icons/Drip (2).PNG" id="9_dqm4m"]
[ext_resource type="Texture2D" uid="uid://2cxaf5o10wfb" path="res://src/assets/icons/Icon14_33.png" id="10_8r2vy"]
[ext_resource type="Texture2D" uid="uid://xwwrbg84l8c2" path="res://src/assets/icons/Icon30_39.png" id="11_48j35"]

[sub_resource type="LabelSettings" id="LabelSettings_60pkn"]
font = ExtResource("2_nym1v")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tco8"]
bg_color = Color(0, 0, 0, 0.235294)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dena"]
bg_color = Color(0, 0, 0, 0.235294)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w5y4u"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_6ta1t"]
font = ExtResource("2_nym1v")
font_size = 64

[sub_resource type="Animation" id="Animation_b3gsb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qkxo3"]
resource_name = "new_animation"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhq4o"]
_data = {
"RESET": SubResource("Animation_b3gsb"),
"new_animation": SubResource("Animation_qkxo3")
}

[node name="Interface" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_478kc")

[node name="LevelBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 254.0
grow_horizontal = 2
theme_override_constants/margin_left = 240
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 90

[node name="Panel" type="Panel" parent="LevelBox"]
self_modulate = Color(0, 0, 0, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="LevelBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="LevelBox/Panel/MarginContainer"]
layout_mode = 2

[node name="Stats" type="HBoxContainer" parent="LevelBox/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="1" type="Control" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/1"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("9_dqm4m")
expand_mode = 1

[node name="Label" type="Label" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -49.0
grow_horizontal = 0
grow_vertical = 0
text = "10"
label_settings = SubResource("LabelSettings_60pkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Control" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/2"]
texture_filter = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_8r2vy")

[node name="Label" type="Label" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -62.0
offset_right = 17.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_60pkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Control" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/3"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_48j35")

[node name="Label" type="Label" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Stats/3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -62.0
offset_right = 17.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_60pkn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="LevelBox/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory" type="HBoxContainer" parent="LevelBox/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="1" type="Button" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_8tco8")
script = ExtResource("6_syfkd")

[node name="TextureRect" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/1"]
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(2.5, 2.5)
region_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/1"]
texture_filter = 1
position = Vector2(91, 86)
scale = Vector2(4, 4)
texture = ExtResource("4_66cpv")
region_enabled = true
region_rect = Rect2(1, 1, 14, 13)

[node name="2" type="Button" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3dena")
script = ExtResource("6_syfkd")
type = "2"

[node name="TextureRect" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/2"]
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(2.5, 2.5)
region_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/2"]
texture_filter = 1
position = Vector2(91, 86)
scale = Vector2(4, 4)
texture = ExtResource("4_66cpv")
region_enabled = true
region_rect = Rect2(17, 1, 14, 13)

[node name="3" type="Button" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3dena")
script = ExtResource("6_syfkd")
type = "3"

[node name="TextureRect" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/3"]
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(2.5, 2.5)
region_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/3"]
texture_filter = 1
position = Vector2(91, 86)
scale = Vector2(4, 4)
texture = ExtResource("4_66cpv")
region_enabled = true
region_rect = Rect2(33, 1, 14, 13)

[node name="4" type="Button" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3dena")
script = ExtResource("6_syfkd")
type = "4"

[node name="TextureRect" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/4"]
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(2.5, 2.5)
region_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="LevelBox/Panel/MarginContainer/HBoxContainer/Inventory/4"]
texture_filter = 1
position = Vector2(91, 86)
scale = Vector2(4, 4)
texture = ExtResource("4_66cpv")
region_enabled = true
region_rect = Rect2(49, 1, 14, 13)

[node name="DialogueBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -254.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 240
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="DialogueBox"]
self_modulate = Color(0, 0, 0, 0.235294)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="DialogueBox/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "This is a label box"
label_settings = SubResource("LabelSettings_w5y4u")

[node name="TimePlayed" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -235.0
offset_top = -196.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="TimePlayed"]
layout_mode = 2
size_flags_horizontal = 3
text = "0:00"
label_settings = SubResource("LabelSettings_6ta1t")
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhq4o")
}
autoplay = "new_animation"
